ボタンのデザイン

--- a/src/components/arrows/index.less
+++ b/src/components/arrows/index.less
@@ -1,3 +1,8 @@
+@marginRatio: 2%;
+
 .glitter__arrow-button {
+  position: absolute;
+  top: 50%;
+  color: rgba(211, 211, 211, .8);
   font-size: 2em;
 }
