矢印は必要なときだけ表示する
closes #5

--- a/src/components/arrows/index.less
+++ b/src/components/arrows/index.less
@@ -1,8 +1,13 @@
 @marginRatio: 5%;
 
 .glitter__arrow-button {
+  display: none;
   position: absolute;
   top: 50%;
   color: rgba(211, 211, 211, .8);
   font-size: 3em;
+
+  &.visible {
+    display: inline;
+  }
 }
