矢印アイコン変更
前の嫌いだったので

closes #62

--- a/src/components/buttons/index.less
+++ b/src/components/buttons/index.less
@@ -1,4 +1,4 @@
-@marginRatio: 5%;
+@marginRatio: 3%;
 
 .glitter__button {
   position: absolute;
@@ -9,4 +9,5 @@
 .glitter__arrow-button {
   .glitter__button();
   top: 50%;
+  font-size: 4em;
 }
