Update log url.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">
+        <p>This project is maintained by <a href="https://office-asot.com/">
           <img class="asot-logo"
                src="/Glitter/assets/images/logo@2x.png"
                alt="{{ site.github.owner_name }}" />
