--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,9 @@
 
 @import "{{ site.theme }}";
 
+body {
+  background-color: rgba(141, 103, 72, .12);
+}
 body a, body a:hover, body a:link, body a:visited, body a:active {
   color: #ed6d45;
 }
