--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@ body a, body a:hover, body a:link, body a:visited, body a:active {
 }
 
 .asot-logo {
-  max-width: 45%;
+  max-width: 140px;
   padding: 5px 5px 0;
+  display: block;
 }
